--- a/myproject/clicker/templates/clicker/home.html
+++ b/myproject/clicker/templates/clicker/home.html
@@ -1,3 +1,17 @@
+import os
+from django.core.wsgi import get_wsgi_application
+
+os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'clicker_project.settings')
+application = get_wsgi_application()
+
+# clicker_project/asgi.py
+import os
+from django.core.asgi import get_asgi_application
+
+os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'clicker_project.settings')
+application = get_asgi_application()
+
+# clicker_app/templates/clicker_app/home.html
 <!DOCTYPE html>
 <html lang="uk">
 <head>
